k8s/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis-srvr
  template:
    metadata:
      labels:
        component: redis-srvr
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: redis-srvr
  ports:
    - port: 6379
      targetPort: 6379
