k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-app
  template:
    metadata:
      labels:
        component: server-app
    spec:
      containers:
        - name: server
          image: stephengrider/multi-server
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: server-app
  ports:
    - port: 5000
      targetPort: 5000
